# raptr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  User-Docu.md  doxyfile
src/: CUDA_HandleError.hpp  CUSPARSE_HandleError.hpp  ChordsCalc_lowlevel.hpp  CpuChunkCatalogue.hpp  CpuChunkHandle.hpp  CpuChunkMem.hpp  Debug.hpp  FileTalk.hpp  GpuChunkCatalogue.hpp  GpuChunkHandle.hpp  GpuChunkMem.hpp  GridAdapter.hpp  H5ChunkCatalogue.hpp  H5ChunkHandle.hpp  H5DensityReader.hpp  H5DensityWriter.hpp  H5File2DefaultMeasurementList.h  H5Reader.hpp  H5Writer.hpp  MeasurementList.hpp  MeasurementSetup.hpp  MeasurementSetupLinIndex.hpp  MeasurementSetupTrafo2CartCoord.hpp  MeasurementWritingTraits.hpp  RayGenerators.hpp  TemplateVertex.hpp  TemplateVertex.tpp  VoxelGrid.hpp  VoxelGridLinIndex.hpp  chunkCopying.hpp  chunkSaving.hpp  convertCsr2Ecsr.hpp  cooSort.hpp  create_forwardprojection_input.cpp  csrmv.hpp  cuda_wrappers.hpp  cusparseWrapper.hpp  device_constant_memory.hpp  distancePointLine.h  forwardprojection.cu  (+14 more)
src/Ply/: CompositePlyGeometry.cpp  CompositePlyGeometry.hpp  Ply.hpp  PlyBox.hpp  PlyBox.tpp  PlyGeometry.cpp  PlyGeometry.hpp  PlyGrid.hpp  PlyGrid.tpp  PlyLine.hpp  PlyLine.tpp  PlyRectangle.hpp  PlyRectangle.tpp  PlyScene.hpp  PlyWriter.cpp  PlyWriter.hpp  test_PlyBox.cpp  test_PlyGeometry.cpp  test_PlyGrid.cpp  test_PlyLine.cpp  test_PlyWriter.cpp
src/tests/: MeasurementSetupTrafo2CartCoordUT.cu  UT.cpp  backprojection.cu  bigtest.cpp  cooSortUT.cu  emptyUT.cpp  example_condense.h  example_condense_defines.h  example_condense_main.cu  pureSMCalculation.cu  reco.cu  test_CudaSMLine.cu  test_FileTalk.cpp  test_H5DensityWriter.cpp  test_H5Reader.cpp  test_H5Writer.cpp  test_MeasurementSetup.cu  test_MeasurementSetupLinIndex.cu  test_MeasurementSetupTrafo2CartCoord.cu  test_VoxelGridLinIndex.cu  test_convertCsr2Ecsr.cu  test_cooSort.cu  test_cusparseWrapper.cu  test_getSystemMatrixDeviceOnly.cu  test_getSystemMatrixFromWorkqueue.cu  test_getWorkqueue-backprojection.cu  test_getWorkqueue.cu  test_mlemOperations.cu
